[gd_scene load_steps=5 format=3 uid="uid://bt741rpstddik"]

[ext_resource type="Script" uid="uid://cx6662g4t2osr" path="res://main/options_screen.gd" id="1_tpw2i"]
[ext_resource type="FontFile" uid="uid://wt66k3fampfe" path="res://PixelOperator8.ttf" id="2_nn5e1"]
[ext_resource type="Theme" uid="uid://bgpm23y06s5df" path="res://main_theme.tres" id="2_os0qx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk6kw"]
bg_color = Color(0, 0, 0, 1)

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tpw2i")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tk6kw")

[node name="LayoutVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 69.0
offset_right = 342.0
offset_bottom = 189.0
theme_override_constants/separation = 60

[node name="TitleLabel" type="Label" parent="LayoutVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_fonts/font = ExtResource("2_nn5e1")
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="LayoutVBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="MusicLabel" type="Label" parent="LayoutVBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_fonts/font = ExtResource("2_nn5e1")
theme_override_font_sizes/font_size = 24
text = "Music volume"

[node name="MusicVolumeSlider" type="HSlider" parent="LayoutVBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_os0qx")
max_value = 1.0
step = 0.05

[node name="SoundEffectsLabel" type="Label" parent="LayoutVBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_fonts/font = ExtResource("2_nn5e1")
theme_override_font_sizes/font_size = 24
text = "SFX volume"

[node name="EffectsVolumeSlider" type="HSlider" parent="LayoutVBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_os0qx")
max_value = 1.0
step = 0.05
value = 1.0
editable = false
scrollable = false

[node name="BackButton" type="Button" parent="LayoutVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_os0qx")
text = "Back"

[connection signal="value_changed" from="LayoutVBoxContainer/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="pressed" from="LayoutVBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
